--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="assets/static/favicons/apple-touch-icon.png">
   <link rel="mask-icon" href="assets/static/favicons/safari-pinned-tab.svg" color="#fafafa">
 
-  <link rel="manifest" id="manifest"> <!--href="lpm.json" href="lpm.webmanifest" -->
+  <link rel="manifest" href="lpm.webmanifest"> <!--href="lpm.json" href="lpm.webmanifest" -->
   
   <link rel="stylesheet" href="assets/core/index.css" media="all" type="text/css">
   <script src="assets/core/dbx.min.js" defer></script>
