--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Local Password Manager">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="terra-wallet">
   
   <meta name="HandheldFriendly" content="true"/>
   <meta name="mobile-web-app-capable" content="yes"/>
